Modified main page, changed favicon, changed resource type for main page,

--- a/Resources.resx
+++ b/Resources.resx
@@ -122,6 +122,9 @@
     <value>Resources\Images\favicon.png;System.Byte[], mscorlib, Version=1.2.6.0, Culture=neutral, PublicKeyToken=c07d481e9758c731</value>
   </data>
   <data name="main" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\html\main.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>resources\html\main.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  </data>
+  <data name="mainPage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Html\main.html;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
