--- a/Resources.resx
+++ b/Resources.resx
@@ -127,4 +127,7 @@
   <data name="mainPage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Html\main.html;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="shooting" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Html\shooting.html;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
